Update about section. Add Google Analytics code. Add Contact Us form.

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ fedora.yml
 solr.yml
 secrets.yml
 blacklight.yml
+homosaurus.yml
+contact_emails.yml
 
 # Files to ignore by default in Git #
 #####################################
